welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: value =< is not a member of Int
def nearHundred(n:Int): Boolean = {if (100-n =< 10 || 200-n =< 10) {true} else {false} } 
                                             ^nearHundred:1: error: value =< is not a member of Int
def nearHundred(n:Int): Boolean = {if (100-n =< 10 || 200-n =< 10) {true} else {false} } 
                                                            ^